--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,37 @@
 /* styles.css */
 
-/* Global Styles */
+/* Ajout du carrousel */
+.carrousel {
+    width: 100%;
+    overflow: hidden;
+    padding: 20px 0;
+    background-color: #f9f9f9;
+}
+
+.carrousel-container {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.carrousel-item {
+    min-width: 100%;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+.carrousel-item img {
+    max-width: 80%;
+    max-height: 300px; /* Ajuste la hauteur maximale de l'image */
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.carrousel-item h3 {
+    font-size: 1.5em;
+    color: #333;
+}
+
+/* Styles existants */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -97,33 +128,4 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-}
-
-.carrousel {
-    width: 100%;
-    overflow: hidden;
-    padding: 20px 0;
-    background-color: #f9f9f9;
-}
-
-.carrousel-container {
-    display: flex;
-    transition: transform 0.5s ease-in-out;
-}
-
-.carrousel-item {
-    min-width: 100%;
-    box-sizing: border-box;
-    text-align: center;
-}
-
-.carrousel-item img {
-    max-width: 80%;
-    border-radius: 5px;
-    margin-bottom: 10px;
-}
-
-.carrousel-item h3 {
-    font-size: 1.5em;
-    color: #333;
 }
