--- a/styles.css
+++ b/styles.css
@@ -14,21 +14,45 @@
 }
 
 .carrousel-item {
+    display: flex;
     min-width: 100%;
     box-sizing: border-box;
-    text-align: center;
+    align-items: center;
 }
 
 .carrousel-item img {
-    max-width: 80%;
-    max-height: 300px; /* Ajuste la hauteur maximale de l'image */
+    max-width: 50%;
+    max-height: 300px;
     border-radius: 5px;
-    margin-bottom: 10px;
+    margin-right: 20px;
 }
 
-.carrousel-item h3 {
+.carrousel-text {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    max-width: 50%;
+}
+
+.carrousel-text h3 {
     font-size: 1.5em;
-    color: #333;
+    margin: 0 0 10px 0;
+}
+
+.carrousel-text p {
+    font-size: 1em;
+    color: #666;
+}
+
+.carrousel-text a {
+    text-decoration: none;
+    color: #007BFF;
+    transition: color 0.3s ease;
+}
+
+.carrousel-text a:hover {
+    color: #0056b3;
 }
 
 /* Styles existants */
