--- a/styles.css
+++ b/styles.css
@@ -11,28 +11,21 @@
 
 .carrousel-container {
     display: flex;
-    justify-content: space-between; /* Espacement entre les items */
     transition: transform 0.5s ease-in-out;
 }
 
 .carrousel-item {
     display: flex;
-    min-width: 100%; /* Largeur pour afficher deux produits côte à côte */
+    min-width: 100%;
     box-sizing: border-box;
     align-items: center;
-    justify-content: space-between; /* Espacement entre les produits */
+    justify-content: space-between; /* Espacement entre les ensembles */
+    padding: 0 20px;
 }
 
-.carrousel-product {
-    display: flex;
-    width: 48%; /* Largeur pour afficher deux produits côte à côte */
-    align-items: center;
-    justify-content: center; /* Centre les items */
-}
-
-.carrousel-product img {
-    max-width: 60%;
-    max-height: 300px;
+.carrousel-item img {
+    max-width: 30%;
+    max-height: 200px;
     border-radius: 5px;
     margin-right: 20px;
 }
@@ -42,7 +35,7 @@
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    max-width: 40%;
+    width: 60%;
 }
 
 .carrousel-text h3 {
